package edu.fiuba.algo3.modelo;

public interface Observer {

    void update();
}
